--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,19 @@
 Session.vim
 .netrwhist
 *~
+
+### OSX ###
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must ends with two \r.
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
